@@ -33,8 +33,6 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Consumer;
 
@@ -59,14 +57,14 @@ public class ImageDowngradeTest {
         }
     }
 
-    static final List<ApiMessageAndVersion> TEST_RECORDS = Arrays.asList(
+    static final List<ApiMessageAndVersion> TEST_RECORDS = List.of(
             new ApiMessageAndVersion(new TopicRecord().
                     setName("foo").
                     setTopicId(Uuid.fromString("5JPuABiJTPu2pQjpZWM6_A")), (short) 0),
             new ApiMessageAndVersion(new PartitionRecord().
                     setTopicId(Uuid.fromString("5JPuABiJTPu2pQjpZWM6_A")).
-                    setReplicas(Arrays.asList(0, 1)).
-                    setIsr(Arrays.asList(0, 1)).
+                    setReplicas(List.of(0, 1)).
+                    setIsr(List.of(0, 1)).
                     setLeader(0).
                     setLeaderEpoch(1).
                     setPartitionEpoch(2), (short) 0));
@@ -78,67 +76,14 @@ public class ImageDowngradeTest {
     }
 
     /**
-     * Test downgrading to a MetadataVersion that doesn't support FeatureLevelRecord.
-     */
-    @Test
-    public void testPremodernVersion() {
-        writeWithExpectedLosses(MetadataVersion.IBP_3_2_IV0,
-            Collections.singletonList(
-                "feature flag(s): foo.feature"),
-            Arrays.asList(
-                metadataVersionRecord(MetadataVersion.IBP_3_3_IV0),
-                TEST_RECORDS.get(0),
-                TEST_RECORDS.get(1),
-                new ApiMessageAndVersion(new FeatureLevelRecord().
-                        setName("foo.feature").
-                        setFeatureLevel((short) 4), (short) 0)),
-            Arrays.asList(
-                TEST_RECORDS.get(0),
-                TEST_RECORDS.get(1))
-        );
-    }
-
-    /**
-     * Test downgrading to a MetadataVersion that doesn't support inControlledShutdown.
-     */
-    @Test
-    public void testPreControlledShutdownStateVersion() {
-        writeWithExpectedLosses(MetadataVersion.IBP_3_3_IV2,
-            Collections.singletonList(
-                "the inControlledShutdown state of one or more brokers"),
-            Arrays.asList(
-                metadataVersionRecord(MetadataVersion.IBP_3_3_IV3),
-                new ApiMessageAndVersion(new RegisterBrokerRecord().
-                    setBrokerId(123).
-                    setIncarnationId(Uuid.fromString("XgjKo16hRWeWrTui0iR5Nw")).
-                    setBrokerEpoch(456).
-                    setRack(null).
-                    setFenced(false).
-                    setInControlledShutdown(true), (short) 1),
-                TEST_RECORDS.get(0),
-                TEST_RECORDS.get(1)),
-            Arrays.asList(
-                metadataVersionRecord(MetadataVersion.IBP_3_3_IV2),
-                new ApiMessageAndVersion(new RegisterBrokerRecord().
-                    setBrokerId(123).
-                    setIncarnationId(Uuid.fromString("XgjKo16hRWeWrTui0iR5Nw")).
-                    setBrokerEpoch(456).
-                    setRack(null).
-                    setFenced(false), (short) 0),
-                TEST_RECORDS.get(0),
-                TEST_RECORDS.get(1))
-        );
-    }
-
-    /**
      * Test downgrading to a MetadataVersion that doesn't support ZK migration.
      */
     @Test
     public void testPreZkMigrationSupportVersion() {
         writeWithExpectedLosses(MetadataVersion.IBP_3_3_IV3,
-            Collections.singletonList(
+            List.of(
                 "the isMigratingZkBroker state of one or more brokers"),
-            Arrays.asList(
+            List.of(
                 metadataVersionRecord(MetadataVersion.IBP_3_4_IV0),
                 new ApiMessageAndVersion(new RegisterBrokerRecord().
                     setBrokerId(123).
@@ -150,7 +95,7 @@ public class ImageDowngradeTest {
                     setIsMigratingZkBroker(true), (short) 2),
                 TEST_RECORDS.get(0),
                 TEST_RECORDS.get(1)),
-            Arrays.asList(
+            List.of(
                 metadataVersionRecord(MetadataVersion.IBP_3_3_IV3),
                 new ApiMessageAndVersion(new RegisterBrokerRecord().
                     setBrokerId(123).
@@ -170,21 +115,21 @@ public class ImageDowngradeTest {
         MetadataVersion inputMetadataVersion = outputMetadataVersion;
         PartitionRecord testPartitionRecord = (PartitionRecord) TEST_RECORDS.get(1).message();
         writeWithExpectedLosses(outputMetadataVersion,
-            Collections.singletonList(
+            List.of(
                     "the directory assignment state of one or more replicas"),
-            Arrays.asList(
+            List.of(
                 metadataVersionRecord(inputMetadataVersion),
                 TEST_RECORDS.get(0),
                 new ApiMessageAndVersion(
-                    testPartitionRecord.duplicate().setDirectories(Arrays.asList(
+                    testPartitionRecord.duplicate().setDirectories(List.of(
                         Uuid.fromString("c7QfSi6xSIGQVh3Qd5RJxA"),
                         Uuid.fromString("rWaCHejCRRiptDMvW5Xw0g"))),
                     (short) 2)),
-            Arrays.asList(
+            List.of(
                 metadataVersionRecord(outputMetadataVersion),
                 TEST_RECORDS.get(0),
                 new ApiMessageAndVersion(
-                    testPartitionRecord.duplicate().setDirectories(Collections.emptyList()),
+                    testPartitionRecord.duplicate().setDirectories(List.of()),
                     (short) 0))
         );
     }
@@ -200,8 +145,7 @@ public class ImageDowngradeTest {
         RecordTestUtils.replayAll(delta, inputs);
         MetadataImage image = delta.apply(MetadataProvenance.EMPTY);
         RecordListWriter writer = new RecordListWriter();
-        image.write(writer, new ImageWriterOptions.Builder().
-                setMetadataVersion(metadataVersion).
+        image.write(writer, new ImageWriterOptions.Builder(metadataVersion).
                 setLossHandler(lossConsumer).
                 build());
         assertEquals(expectedLosses, lossConsumer.losses, "Failed to get expected metadata losses.");
